<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/text_BEPXO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="#00FE7B"
        app:layout_constraintBottom_toTopOf="@id/show_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_B"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_E"
            app:layout_constraintTop_toTopOf="@id/text_BEPXO" />

        <TextView
            android:id="@+id/text_E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_E"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toRightOf="@id/text_B"
            app:layout_constraintRight_toLeftOf="@id/text_P"
            app:layout_constraintTop_toTopOf="@id/text_BEPXO" />

        <TextView
            android:id="@+id/text_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_P"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toRightOf="@id/text_E"
            app:layout_constraintRight_toLeftOf="@id/text_X"
            app:layout_constraintTop_toTopOf="@id/text_BEPXO" />

        <TextView
            android:id="@+id/text_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_X"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toRightOf="@id/text_P"
            app:layout_constraintRight_toLeftOf="@id/text_O"
            app:layout_constraintTop_toTopOf="@id/text_BEPXO" />

        <TextView
            android:id="@+id/text_O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_O"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/text_X"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_BEPXO" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/show_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        android:background="#151516"
        android:backgroundTint="#F81A1A1B"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FDFDFE"
        app:layout_constraintBottom_toTopOf="@id/button_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_BEPXO" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/button_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@id/text_ВСКИЙ"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_text">


        <LinearLayout
            android:id="@+id/numbers_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/actions_on_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@id/button_bar"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/button_clean"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_clean"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_change_of_sign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_change_of_sign"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_percent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_percent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:text="@string/button_div"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/numbers_1_2_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_x"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:text="@string/button_x"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_4_5_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_dec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:text="@string/button_decrement"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_7_8_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_inc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:text="@string/button_increment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers_0_."
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="InefficientWeight">

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle,NestedWeights" />

                <Button
                    android:id="@+id/button_point"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_point"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#E4DBDB"
                    android:text="@string/button_equals"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/text_ВСКИЙ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        android:background="#00FE7B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_bar">

        <TextView
            android:id="@+id/text_Вв"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_Вв"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_C"
            app:layout_constraintTop_toTopOf="@id/text_ВСКИЙ" />

        <TextView
            android:id="@+id/text_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_C"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/text_Вв"
            app:layout_constraintRight_toLeftOf="@id/text_K"
            app:layout_constraintTop_toTopOf="@id/text_ВСКИЙ" />

        <TextView
            android:id="@+id/text_K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_K"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/text_C"
            app:layout_constraintRight_toLeftOf="@id/text_И"
            app:layout_constraintTop_toTopOf="@id/text_ВСКИЙ" />

        <TextView
            android:id="@+id/text_И"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_И"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/text_K"
            app:layout_constraintRight_toLeftOf="@id/text_Й"
            app:layout_constraintTop_toTopOf="@id/text_ВСКИЙ" />

        <TextView
            android:id="@+id/text_Й"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_Й"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/text_И"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_ВСКИЙ" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>